/**
 * @author ChenWeihan
 * @create 2021-12-05 15:12
 */
public interface CarState {
    String CAR_TYPE_FREE = "1"; // 车辆空闲
    String CAR_TYPE_OCCUPY = "2"; // 车辆使用中。
}
