/**
 * @author ChenWeihan
 * @create 2021-12-05 16:08
 */
public interface OrderState {
    String ORDER_TYPE_FINISH = "1"; // 订单完成。
    String ORDER_TYPE_NO_FINISH = "2"; // 订单未完成。
}
